[gd_scene load_steps=8 format=3 uid="uid://bgtx3qodty7ef"]

[ext_resource type="Script" path="res://tutorial files/test/fov_raycast.gd" id="1_qmai2"]
[ext_resource type="Texture2D" uid="uid://bwr3pit7gpm8y" path="res://tutorial files/test/bitmap.png" id="2_3rh0f"]
[ext_resource type="Texture2D" uid="uid://cey4g5wm4sm87" path="res://Goblin's_Path/icon.svg" id="2_6g2lc"]
[ext_resource type="Texture2D" uid="uid://tdubgm3rnl7" path="res://Goblin's_Path/sprites/laserRed08.png" id="3_e00hw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvjvo"]
size = Vector2(128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wrjh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6g2lc")
}, {
"duration": 1.0,
"texture": ExtResource("2_6g2lc")
}, {
"duration": 1.0,
"texture": ExtResource("2_6g2lc")
}, {
"duration": 1.0,
"texture": ExtResource("2_6g2lc")
}, {
"duration": 1.0,
"texture": ExtResource("2_6g2lc")
}, {
"duration": 1.0,
"texture": ExtResource("3_e00hw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="QuadMesh" id="QuadMesh_um6ob"]

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(594, 300)
script = ExtResource("1_qmai2")
CHASE_SPEED = 180

[node name="Bitmap" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.25098)
show_behind_parent = true
position = Vector2(2.49147e-05, 5.48363e-06)
scale = Vector2(1.22727, 1.22727)
texture = ExtResource("2_3rh0f")
offset = Vector2(117.333, 2.44444)

[node name="RayCast1" type="RayCast2D" parent="Bitmap"]
position = Vector2(57.037, 6.51852)
rotation = -1.914
scale = Vector2(83.665, 3.439)
target_position = Vector2(0.142576, 54.2578)

[node name="RayCast2" type="RayCast2D" parent="Bitmap"]
position = Vector2(60.2963, 5.70369)
rotation = -1.12143
scale = Vector2(69.24, 3.437)
target_position = Vector2(-0.0758212, 54.1303)

[node name="RayCast3" type="RayCast2D" parent="Bitmap"]
position = Vector2(63.5556, -28.5185)
rotation = -2.36478
scale = Vector2(40, 3.439)

[node name="RayCast4" type="RayCast2D" parent="Bitmap"]
position = Vector2(61.9259, 27.7037)
rotation = -0.762277
scale = Vector2(40, 3.439)
target_position = Vector2(-0.00115252, 51.6189)

[node name="RayCast5" type="RayCast2D" parent="Bitmap"]
position = Vector2(61.9259, 27.7037)
rotation = -1.62264
scale = Vector2(40, 3.439)
target_position = Vector2(-0.00115252, 51.6189)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wvjvo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wrjh1")
frame_progress = 0.327734

[node name="Chase_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="wander_idle_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="wander_move_timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
scale = Vector2(546.703, 546.703)
mesh = SubResource("QuadMesh_um6ob")

[connection signal="timeout" from="Chase_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="wander_idle_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="wander_move_timer" to="." method="_on_timer_timeout"]
